--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,13 +19,13 @@
 					<a href="/equipment.html">
 						<li>Equipment</li>
 					</a>
-					<a href="#">
+					<a href="/coffee.html">
 						<li>Coffee</li>
 					</a>
-					<a href="#">
+					<a href="snacks.html">
 						<li>Snacks</li>
 					</a>
-					<a href="#">
+					<a href="contact.html">
 						<li>Contact</li>
 					</a>
 				</ul>
