--- a/src/assets/css/merck_styles.css
+++ b/src/assets/css/merck_styles.css
@@ -15,3 +15,5 @@
 @import "templates/snacks";
 @import "templates/header";
 @import "templates/homepage";
+@import "templates/slicknav";
+@import "templates/responsive";
