--- a/src/layouts/root.html
+++ b/src/layouts/root.html
@@ -16,5 +16,11 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 	<script src="{{root}}js/app.js"></script>
+	<script src="{{root}}js/jquery.slicknav.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+	$('#menu').slicknav();
+});
+</script>
 </body>
 </html>
