--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
 			<i class="fas fa-envelope"></i>
 		</div>
 		<div class="cch-menu">
-			<nav>
+			<nav  id="menu">
 				<ul>
 					<a href="/index.html">
 						<li>Home</li>
@@ -22,10 +22,10 @@
 					<a href="/coffee.html">
 						<li>Coffee</li>
 					</a>
-					<a href="snacks.html">
+					<a href="/snacks.html">
 						<li>Snacks</li>
 					</a>
-					<a href="contact.html">
+					<a href="/contact.html">
 						<li>Contact</li>
 					</a>
 				</ul>
