--- a/src/assets/css/templates/contact.css
+++ b/src/assets/css/templates/contact.css
@@ -9,3 +9,85 @@
     display: flex; flex-wrap: wrap; justify-content: space-between
 }
 .competition-coffee-contact form .form-group.half-width{width: 48%;}
+
+.competition-coffee-contact form .form-group input ,.competition-coffee-contact form .form-group textarea{border: 1px solid #756a69;
+    height: 35px;
+    margin-bottom: 20px; resize: none;}
+    .competition-coffee-contact form .form-group label{
+        color: #706463;
+    font-family: 'Klinic Book', serif;
+    font-size: 1.25rem;
+    line-height: 1.3; margin-bottom: 10px;
+    }
+    
+    .interested ul li input[type=checkbox] {
+        visibility: hidden; 
+    }
+    
+    .competition-coffee-contact form .form-group textarea{min-height: 300px}
+    
+    /* SQUARED ONE */
+     .interested ul li .squaredOne {
+        width: 22px;
+        height: 22px;
+        background: #fff;
+        margin-right: 15px;
+       position: relative;
+       border: 1.5px solid #756a69;
+    }
+    
+     .interested ul li .squaredOne label {
+        cursor: pointer;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        left: 0;
+        top: 0; 
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222', endColorstr='#45484d',GradientType=0 );
+    }
+    
+     .interested ul li .squaredOne label:after {
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+        filter: alpha(opacity=0);
+        opacity: 0;
+        content: '';
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        background: #88c392;
+        top: 2px;
+        left: 2px; 
+    }
+    
+     .interested ul li .squaredOne label:hover::after {
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+        filter: alpha(opacity=30);
+        opacity: 0.3;
+    }
+    
+    .interested ul li .squaredOne input[type=checkbox]:checked + label:after {
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+        filter: alpha(opacity=100);
+        opacity: 1;
+    }
+    
+    .interested ul li {
+        display: flex;    color: #706463;
+        font-family: 'Klinic Book', serif;
+        font-size: 1.25rem;
+        line-height: 1.3; margin-bottom: 10px
+    }
+    .competition-coffee-contact form p{
+        color: #706463;
+        font-family: 'Klinic Book', serif;
+        font-size: 1.25rem; font-weight: bold; width: 65%; margin-bottom: 35px;
+    }
+    .competition-coffee-contact form button{
+        background: #88c392;
+    height: 50px;
+    width: 200px;
+    color: #fff;
+    font-family: 'Klinic Book', serif;
+        font-size: 1.25rem; margin-top: 45px;
+
+    }
