--- a/src/assets/css/templates/homepage.css
+++ b/src/assets/css/templates/homepage.css
@@ -158,11 +158,23 @@
 			display: flex;
 			justify-content: space-between;
 			padding-bottom: 2%;
+			ul{ 
+				display: flex;
+				flex-wrap: wrap;
+				li{
+					flex: 0 20%;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					padding: 10px;
+					img {
+						max-width: 100%;
+    					height: auto;
+					}
+				}
 
-			img {
-				height: 100%;
-				width: 140px;
 			}
+			
 		}
 
 		.ccho-equipment-row {
@@ -171,9 +183,21 @@
 			justify-content: space-between;
 			padding-bottom: 2%;
 
-			img {
-				height: 100%;
-				width: 200px;
+			ul{ 
+				display: flex;
+				flex-wrap: wrap;
+				li{
+					flex: 0 20%;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					padding: 10px;
+					img {
+						max-width: 100%;
+    					height: auto;
+					}
+				}
+
 			}
 		}
 		
