--- a/src/assets/css/templates/slicknav.css
+++ b/src/assets/css/templates/slicknav.css
@@ -21,7 +21,7 @@
     line-height: 1.188em;
     float: left; }
   .slicknav_menu .slicknav_icon {
-    float: left;
+    float: right;
     width: 1.125em;
     height: 0.875em;
     margin: 0.188em 0 0 0.438em; }
@@ -56,8 +56,11 @@
   clear: both; }
   .slicknav_nav ul {
     display: block; }
-  .slicknav_nav li {
-    display: block; }
+    .slicknav_nav li {
+      display: block;
+      background: #605352;
+      border-radius: 5px;
+  }
   .slicknav_nav .slicknav_arrow {
     font-size: 0.8em;
     margin: 0 0 0 0.4em; }
@@ -75,11 +78,13 @@
 .slicknav_brand {
   float: left; }
 
-.slicknav_menu {
-  font-size: 16px;
-  box-sizing: border-box;
-  background: #4c4c4c;
-  padding: 5px; }
+  .slicknav_menu {
+    font-size: 1rem;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background: #706463;
+    padding: 5px;
+}
   .slicknav_menu * {
     box-sizing: border-box; }
   .slicknav_menu .slicknav_menutxt {
@@ -89,14 +94,13 @@
   .slicknav_menu .slicknav_icon-bar {
     background-color: #fff; }
 
-.slicknav_btn {
-  margin: 5px 5px 6px;
-  text-decoration: none;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  background-color: #222; }
+    .slicknav_btn {
+      margin: 0;
+      text-decoration: none;
+      text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+      border-radius: 4px;
+      /* background-color: #605352; */ width: 100%; cursor: pointer;
+  }
 
 .slicknav_nav {
   color: #fff;
@@ -109,7 +113,7 @@
     list-style: none;
     overflow: hidden;
     padding: 0;
-    margin: 0 0 0 20px; }
+    margin: 0 0 0 0px; }
   .slicknav_nav .slicknav_row {
     padding: 5px 10px;
     margin: 2px 5px; }
@@ -120,18 +124,25 @@
       background: #ccc;
       color: #fff; }
   .slicknav_nav a {
-    padding: 5px 10px;
-    margin: 2px 5px;
+    padding: 5px 15px;
+    margin: 2px 0px;
+    color: #fff;
+    display: block;
+    font-family: 'Klinic Book', serif;
+    font-size: 15px;
+    line-height: 1.3;
     text-decoration: none;
-    color: #fff; }
+    text-transform: uppercase;
+    letter-spacing: 1px;
+   }
     .slicknav_nav a:hover {
       -webkit-border-radius: 6px;
       -moz-border-radius: 6px;
       border-radius: 6px;
       background: #ccc;
       color: #222; }
-  .slicknav_nav .slicknav_txtnode {
-    margin-left: 15px; }
+  /* .slicknav_nav .slicknav_txtnode {
+    margin-left: 15px; } */
   .slicknav_nav .slicknav_item a {
     padding: 0;
     margin: 0; }
@@ -156,6 +167,6 @@
     }
     
     .slicknav_menu {
-      display:block;
+      display:block; margin-top: 45px
     }
   }
