--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,24 +10,12 @@
 		<div class="cch-menu">
 			<nav  id="menu">
 				<ul>
-					<a href="/index.html">
-						<li>Home</li>
-					</a>
-					<a href="/about.html">
-						<li>About</li>
-					</a>
-					<a href="/equipment.html">
-						<li>Equipment</li>
-					</a>
-					<a href="/coffee.html">
-						<li>Coffee</li>
-					</a>
-					<a href="/snacks.html">
-						<li>Snacks</li>
-					</a>
-					<a href="/contact.html">
-						<li>Contact</li>
-					</a>
+					<li><a href="/index.html">Home</a></li>					
+					<li><a href="/about.html">About</a></li>
+					<li><a href="/equipment.html">Equipment</a></li>
+					<li><a href="/coffee.html">Coffee</a></li>
+					<li><a href="/snacks.html">Snacks</a></li>
+					<li><a href="/contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</div>
