--- a/src/assets/css/templates/responsive.css
+++ b/src/assets/css/templates/responsive.css
@@ -33,7 +33,7 @@
     .competition-coffee-homepage .ccho-brands h1,
     .competition-coffee-homepage .ccho-content .ccho-content-container .ccho-content-copy-container .ccho-content-copy h1,
     .competition-coffee-homepage .ccho-green-solutions h1
-    {font-size: 20px; text-align: center; margin-bottom: 20px;}
+    {font-size: 15px; text-align: center; margin-bottom: 20px;}
     .competition-coffee-homepage .ccho-content .ccho-content-container h1:after,
     .competition-coffee-homepage .ccho-green-solutions h1:after
     {top: 25px}
@@ -49,13 +49,20 @@
     .competition-coffee-homepage .ccho-green-solutions .ccho-green-solutions-container{flex-direction: column}
     .competition-coffee-homepage .ccho-green-solutions .ccho-green-solutions-container .ccho-green-solutions-content p{font-size: 15px;}
     .competition-coffee-homepage .ccho-green-solutions .ccho-green-solutions-container .ccho-green-solutions-content{padding-bottom: 25px;}
-    .competition-coffee-homepage .ccho-green-solutions .ccho-green-solutions-container .ccho-green-solutions-content h3{font-size: 20px}
+    .competition-coffee-homepage .ccho-green-solutions .ccho-green-solutions-container .ccho-green-solutions-content h3{font-size: 14px}
     .competition-coffee-homepage .ccho-cta{flex-direction: column-reverse; padding: 0 15px}
     .competition-coffee-homepage .ccho-cta .ccho-cta-content-container{width: 100%;padding: 15px; text-align: center}
     .competition-coffee-homepage .ccho-cta .ccho-cta-image{width: 100%;}
     .competition-coffee-homepage .ccho-cta .ccho-cta-content-container p{font-size: 20px}
     .competition-coffee-footer .competition-coffee-wrapper .ccf-logo-info .ccf-info h3{font-size: 25px}
     .competition-coffee-homepage .ccho-cta .ccho-cta-content-container button{font-size: 20px}
+    .competition-coffee-homepage .ccho-content .ccho-content-container{padding: 0}
+    .competition-coffee-homepage .ccho-brands{padding: 0 15px}
 
 
+}
+
+
+@media(min-width: 768px) and (max-width: 1023px){
+    .competition-coffee-header{padding: 2% 15px}
 }
