--- a/src/assets/css/templates/slicknav.css
+++ b/src/assets/css/templates/slicknav.css
@@ -161,7 +161,7 @@
     display:none;
   }
   
-  @media screen and (max-width: 40em) {
+  @media screen and (max-width: 767px) {
     #menu {
       display:none;
     }
