--- a/src/assets/css/templates/slicknav.css
+++ b/src/assets/css/templates/slicknav.css
@@ -129,11 +129,14 @@
     color: #fff;
     display: block;
     font-family: 'Klinic Book', serif;
-    font-size: 15px;
-    line-height: 1.3;
+    font-size: 40px;
     text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 1px; 
+    height: 100%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
    }
     .slicknav_nav a:hover {
       -webkit-border-radius: 6px;
@@ -167,6 +170,6 @@
     }
     
     .slicknav_menu {
-      display:block; margin-top: 45px
+      display:block; margin-top: 100px
     }
   }
